charts/readr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readr
  namespace: readr
spec:
  selector:
    app: readr
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
  type: ClusterIP
